client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web-app
  template:
    metadata:
      labels:
        component: web-app
    spec:
      containers:
        - name: client
          image: grathi8/node-web-app
          ports:
            - containerPort: 8080
