client-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
    type: ClusterIP
    selector:
      component: web-app
    ports:
      - port: 8080
        targetPort: 8080
